<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.runexa.hci_uas.BantuanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bantuan / Petunjuk Aplikasi"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_1"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help1"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_2"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help2"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_3"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help3"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_4"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help4"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_5"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help5"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_6"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help6"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_7"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help7"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_8"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help8"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/help_image_9"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help9"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="14sp"/>


    </LinearLayout>

</ScrollView>
